# docs/swagger.json
@@ -544,6 +544,12 @@
                         "schema": {
                             "$ref": "#/definitions/handlers.ResponseError"
                         }
+                    },
+                    "500": {
+                        "description": "Ошибка при получении профиля пользователя",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.ResponseError"
+                        }
                     }
                 }
             }
@@ -905,16 +911,11 @@
         "handlers.UpdateUserRoleInput": {
             "type": "object",
             "required": [
-                "role"
+                "role_name"
             ],
             "properties": {
-                "role": {
-                    "type": "string",
-                    "enum": [
-                        "admin",
-                        "moderator",
-                        "user"
-                    ]
+                "role_name": {
+                    "type": "string"
                 }
             }
         },
@@ -969,6 +970,26 @@
                 }
             }
         },
+        "models.Role": {
+            "type": "object",
+            "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "users": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.User"
+                    }
+                }
+            }
+        },
         "models.User": {
             "type": "object",
             "properties": {
@@ -994,7 +1015,10 @@
                     "type": "string"
                 },
                 "role": {
-                    "type": "string"
+                    "$ref": "#/definitions/models.Role"
+                },
+                "role_id": {
+                    "type": "integer"
                 },
                 "updated_at": {
                     "type": "string"
