# internal/models/role.go
@@ -1,0 +1,9 @@
+package models
+
+// Модель для роли
+type Role struct {
+	ID          uint   `gorm:"primaryKey" json:"id"`
+	Name        string `gorm:"unique;not null" json:"name"`
+	Description string `json:"description"`
+	Users       []User `gorm:"foreignKey:RoleID"`
+}
